k8s-manifest/ingame-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingame-deployment
spec:
  selector:
    matchLabels:
      app: baseball-game
  template:
    metadata:
      labels:
        app: baseball-game
    spec:
      containers:
      - name: baseball-game
        image: hardplant/baseball-game
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8888
