k8s-manifest/rank-storage-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rank-storage-deployment
spec:
  selector:
    matchLabels:
      app: rank-storage
  template:
    metadata:
      labels:
        app: rank-storage
    spec:
      containers:
      - name: rankboard
        image: hardplant/rankboard
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1111
  volumeClaimTemplates:
    - metadata:
        name: redis-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 500m
