k8s-manifest/ingame-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingame-service
spec:
  type: NodePort
  selector:
    app: ingame
  ports:
  - name: baseball-game
    port: 8888
    targetPort: 8888
  loadBalancerIP:
