k8s-manifest/lobby-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lobby-service
spec:
  type: NodePort
  selector:
    app: lobby
  ports:
  - name: web
    port: 80
    targetPort: 8080
  - name: web-https
    port: 8443
    targetPort: 443
  - name: matchmaker
    port: 8080
    targetPort: 8080
